--- a/BikeShopAPI_UI/Pages/UserPanel.razor
+++ b/BikeShopAPI_UI/Pages/UserPanel.razor
@@ -1,4 +1,23 @@
-﻿@page "/UserPanel"
+﻿@*///////////////////////////////////////////////////////////////////////////
+///
+/// Project:        Sprint 2
+/// File Name:      UserPanel.razor
+/// Description:
+///                 Contains user panel page
+/// Course:         CSCI 4350 - Software Engineering
+/// Authors:
+///                 Darien Roach,   roachda@etsu.edu,   Developer
+///                 Grant Watson,   watsongo@etsu.edu,  Developer
+///                 Kelly King,     kingkr1@etsu.edu,   Developer
+///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+///
+/// Created:        Sunday, October 18th, 2020
+///
+//////////////////////////////////////////////////////////////////////////*@
+
+@page "/UserPanel"
 
 @inject NavigationManager NavigationManager
 
