--- a/BikeShopAPI_UI/Pages/Admin.razor
+++ b/BikeShopAPI_UI/Pages/Admin.razor
@@ -1,4 +1,22 @@
-﻿@page "/Admin"
+﻿@*///////////////////////////////////////////////////////////////////////////
+///
+/// Project:        Sprint 2
+/// File Name:      Admin.razor
+/// Description:
+///                 Contains contents of the admin login page
+/// Course:         CSCI 4350 - Software Engineering
+/// Authors:
+///                 Darien Roach,   roachda@etsu.edu,   Developer
+///                 Grant Watson,   watsongo@etsu.edu,  Developer
+///                 Kelly King,     kingkr1@etsu.edu,   Developer
+///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+///
+/// Created:        Sunday, October 18th, 2020
+///
+//////////////////////////////////////////////////////////////////////////*@
+@page "/Admin"
 
 @inject NavigationManager NavigationManager
 
