--- a/BikeShopAPI_UI/Pages/Create.razor
+++ b/BikeShopAPI_UI/Pages/Create.razor
@@ -1,4 +1,24 @@
-﻿@page "/Create"
+﻿@*///////////////////////////////////////////////////////////////////////////
+///
+/// Project:        Sprint 2
+/// File Name:      Create.razor
+/// Description:
+///                 Contains empty page for Create account page for later 
+///                 sprint
+/// Course:         CSCI 4350 - Software Engineering
+/// Authors:
+///                 Darien Roach,   roachda@etsu.edu,   Developer
+///                 Grant Watson,   watsongo@etsu.edu,  Developer
+///                 Kelly King,     kingkr1@etsu.edu,   Developer
+///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+///
+/// Created:        Sunday, October 18th, 2020
+///
+//////////////////////////////////////////////////////////////////////////*@
+
+@page "/Create"
 
 <h3>Create</h3>
 
