--- a/BikeShopAPI_UI/Pages/EditAccount.razor
+++ b/BikeShopAPI_UI/Pages/EditAccount.razor
@@ -60,6 +60,6 @@
 
     private void Home()
     {
-        NavigationManager.NavigateTo("");
+        NavigationManager.NavigateTo("UserPanel");
     }
 }
