--- a/BikeShopAPI_UI/Pages/AdminPanel.razor
+++ b/BikeShopAPI_UI/Pages/AdminPanel.razor
@@ -22,6 +22,9 @@
 @inject NavigationManager NavigationManager
 @using System.Net.Http
 @using System.Net.Http.Json
+@using System.IO;
+@using System.Net;
+@using Newtonsoft.Json  
 
 
 <h3>AdminPanel</h3>
@@ -96,6 +99,10 @@
     HttpClient client = new HttpClient();
     Json[] json = new Json[100];
 
+
+
+    string temp;
+
     int APINum = 0;
 
     int R;
@@ -115,7 +122,8 @@
     private async void getAPI()
     {
         var response = await client.GetAsync("http://localhost:5001/api/web");
-        json = await client.GetFromJsonAsync<Json[]>("http://localhost:5001/api/web");
+        json= await client.GetFromJsonAsync<Json[]>("http://localhost:5001/api/web");
+
         update();
 
     }
