--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@inject Service Service
+@implements IDisposable
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">BikeShopAPI_UI</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -13,19 +16,35 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="create">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Create Account
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+
+        @if (!Service.LoggedIn)
+        {
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Login">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Login
+                </NavLink>
+            </li>
+        }
+
+        @if (Service.LoggedIn)
+        {
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Logout">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Logout
+                </NavLink>
+            </li>
+        }
+
     </ul>
 </div>
 
 @code {
+
+    private bool logStat = false;
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -33,5 +52,15 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    protected override void OnInitialized()
+    {
+        Service.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        Service.OnChange -= StateHasChanged;
     }
 }
