--- a/BikeShopAPI_UI/Pages/UserPanel.razor
+++ b/BikeShopAPI_UI/Pages/UserPanel.razor
@@ -1,26 +1,27 @@
 ﻿@*///////////////////////////////////////////////////////////////////////////
-///
-/// Project:        Sprint 2
-/// File Name:      UserPanel.razor
-/// Description:
-///                 Contains user panel page
-/// Course:         CSCI 4350 - Software Engineering
-/// Authors:
-///                 Darien Roach,   roachda@etsu.edu,   Developer
-///                 Grant Watson,   watsongo@etsu.edu,  Developer
-///                 Kelly King,     kingkr1@etsu.edu,   Developer
-///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
-///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
-///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
-///
-/// Created:        Sunday, October 18th, 2020
-///
-//////////////////////////////////////////////////////////////////////////*@
+    ///
+    /// Project:        Sprint 2
+    /// File Name:      UserPanel.razor
+    /// Description:
+    ///                 Contains user panel page
+    /// Course:         CSCI 4350 - Software Engineering
+    /// Authors:
+    ///                 Darien Roach,   roachda@etsu.edu,   Developer
+    ///                 Grant Watson,   watsongo@etsu.edu,  Developer
+    ///                 Kelly King,     kingkr1@etsu.edu,   Developer
+    ///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+    ///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+    ///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+    ///
+    /// Created:        Sunday, October 18th, 2020
+    ///
+    //////////////////////////////////////////////////////////////////////////*@
 
 @page "/UserPanel"
 
 @inject NavigationManager NavigationManager
-
+@using Blazorise
+@using Blazorise.Charts
 
 <h3>UserPanel</h3>
 
@@ -34,6 +35,8 @@
     <label>
     </label>
 </p>
+
+
 
 <button class="btn btn-primary" @onclick="LogOut">Log Out</button>
 
@@ -51,6 +54,11 @@
 
 
 @code {
+
+
+
+
+
     private void LogOut()
     {
         NavigationManager.NavigateTo("Logout");
