--- a/BikeShopAPI_UI/Pages/Logout.razor
+++ b/BikeShopAPI_UI/Pages/Logout.razor
@@ -1,25 +1,26 @@
 ﻿@*///////////////////////////////////////////////////////////////////////////
-///
-/// Project:        Sprint 2
-/// File Name:      Logout.razor
-/// Description:
-///                 Contains logout page with a link to home
-/// Course:         CSCI 4350 - Software Engineering
-/// Authors:
-///                 Darien Roach,   roachda@etsu.edu,   Developer
-///                 Grant Watson,   watsongo@etsu.edu,  Developer
-///                 Kelly King,     kingkr1@etsu.edu,   Developer
-///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
-///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
-///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
-///
-/// Created:        Sunday, October 18th, 2020
-///
-//////////////////////////////////////////////////////////////////////////*@
+    ///
+    /// Project:        Sprint 2
+    /// File Name:      Logout.razor
+    /// Description:
+    ///                 Contains logout page with a link to home
+    /// Course:         CSCI 4350 - Software Engineering
+    /// Authors:
+    ///                 Darien Roach,   roachda@etsu.edu,   Developer
+    ///                 Grant Watson,   watsongo@etsu.edu,  Developer
+    ///                 Kelly King,     kingkr1@etsu.edu,   Developer
+    ///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+    ///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+    ///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+    ///
+    /// Created:        Sunday, October 18th, 2020
+    ///
+    //////////////////////////////////////////////////////////////////////////*@
 
 @page "/Logout"
 
 @inject NavigationManager NavigationManager
+@inject Service Service
 
 
 <h3>Logout</h3>
@@ -38,6 +39,7 @@
     private void Home()
     {
         NavigationManager.NavigateTo("");
+        Service.LoggedIn = false;
     }
 
 }
