--- a/BikeShopAPI_UI/Pages/User.razor
+++ b/BikeShopAPI_UI/Pages/User.razor
@@ -1,25 +1,26 @@
 ﻿@*///////////////////////////////////////////////////////////////////////////
-///
-/// Project:        Sprint 2
-/// File Name:      User.razor
-/// Description:
-///                 Contains user login page
-/// Course:         CSCI 4350 - Software Engineering
-/// Authors:
-///                 Darien Roach,   roachda@etsu.edu,   Developer
-///                 Grant Watson,   watsongo@etsu.edu,  Developer
-///                 Kelly King,     kingkr1@etsu.edu,   Developer
-///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
-///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
-///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
-///
-/// Created:        Sunday, October 18th, 2020
-///
-//////////////////////////////////////////////////////////////////////////*@
+    ///
+    /// Project:        Sprint 2
+    /// File Name:      User.razor
+    /// Description:
+    ///                 Contains user login page
+    /// Course:         CSCI 4350 - Software Engineering
+    /// Authors:
+    ///                 Darien Roach,   roachda@etsu.edu,   Developer
+    ///                 Grant Watson,   watsongo@etsu.edu,  Developer
+    ///                 Kelly King,     kingkr1@etsu.edu,   Developer
+    ///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+    ///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+    ///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+    ///
+    /// Created:        Sunday, October 18th, 2020
+    ///
+    //////////////////////////////////////////////////////////////////////////*@
 
 @page "/User"
 
 @inject NavigationManager NavigationManager
+@inject Service Service
 
 <h3>User</h3>
 
@@ -50,5 +51,6 @@
     private void userLog()
     {
         NavigationManager.NavigateTo("UserPanel");
+        Service.LoggedIn = true;
     }
 }
