--- a/BikeShopAPI_UI/Pages/User.razor
+++ b/BikeShopAPI_UI/Pages/User.razor
@@ -1,6 +1,6 @@
 ﻿@*///////////////////////////////////////////////////////////////////////////
     ///
-    /// Project:        Sprint 2
+    /// Project:        Sprint 3
     /// File Name:      User.razor
     /// Description:
     ///                 Contains user login page
@@ -14,6 +14,7 @@
     ///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
     ///
     /// Created:        Sunday, October 18th, 2020
+    /// Updated:        Sunday, November 29th, 2020
     ///
     //////////////////////////////////////////////////////////////////////////*@
 
@@ -21,6 +22,7 @@
 
 @inject NavigationManager NavigationManager
 @inject Service Service
+@inject LoginCount loginCount
 
 <h3>User</h3>
 
@@ -51,7 +53,8 @@
 
     private void userLog()
     {
-        NavigationManager.NavigateTo("UserPanel");
+        NavigationManager.NavigateTo("UserDir");
         Service.LoggedIn = true;
+        loginCount.incCount();
     }
 }
