--- a/BikeShopAPI_UI/Pages/AdminPanelError.razor
+++ b/BikeShopAPI_UI/Pages/AdminPanelError.razor
@@ -1,23 +1,24 @@
 ﻿@*///////////////////////////////////////////////////////////////////////////
-///
-/// Project:        Sprint 2
-/// File Name:      AdminPanel.razor
-/// Description:
-///                 Contains contents of the admin page 
-/// Course:         CSCI 4350 - Software Engineering
-/// Authors:
-///                 Darien Roach,   roachda@etsu.edu,   Developer
-///                 Grant Watson,   watsongo@etsu.edu,  Developer
-///                 Kelly King,     kingkr1@etsu.edu,   Developer
-///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
-///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
-///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
-///
-/// Created:        Sunday, October 18th, 2020
-///
-//////////////////////////////////////////////////////////////////////////*@
+    ///
+    /// Project:        Sprint 3
+    /// File Name:      AdminPanelError.razor
+    /// Description:
+    ///                 Contains contents of the admin error page
+    /// Course:         CSCI 4350 - Software Engineering
+    /// Authors:
+    ///                 Darien Roach,   roachda@etsu.edu,   Developer
+    ///                 Grant Watson,   watsongo@etsu.edu,  Developer
+    ///                 Kelly King,     kingkr1@etsu.edu,   Developer
+    ///                 Jackson Brooks, brooksjt@etsu.edu,  Developer
+    ///                 Nick Ehrhart,   ehrhart@etsu.edu,   Product Owner
+    ///                 Anna Cade,      cadea1@etsu.edu,    Scrum Master
+    ///
+    /// Created:        Sunday, October 18th, 2020
+    /// Updated:        Sunday, November 29th, 2020
+    ///
+    //////////////////////////////////////////////////////////////////////////*@
 
-@page "/AdminPanel"
+@page "/AdminPanelError"
 
 @inject NavigationManager NavigationManager
 @using System.Net.Http
@@ -28,7 +29,7 @@
 
 <p>
     <label>
-        Welcome to the Admin panel!
+        Welcome to the Admin Error panel!
     </label>
 </p>
 
@@ -106,16 +107,16 @@
 
     private async void deleteAPI()
     {
-        var response = await client.GetAsync("https://metricsapi20201108200731.azurewebsites.net/api/web");
-        response = await client.DeleteAsync("https://metricsapi20201108200731.azurewebsites.net/api/web/delete/" + deleteNum);
+        var response = await client.GetAsync("https://metricsapi20201108200731.azurewebsites.net/api/error");
+        response = await client.DeleteAsync("https://metricsapi20201108200731.azurewebsites.net/api/error/delete/" + deleteNum);
     }
 
 
 
     private async void getAPI()
     {
-        var response = await client.GetAsync("https://metricsapi20201108200731.azurewebsites.net/api/web");
-        json = await client.GetFromJsonAsync<Json[]>("https://metricsapi20201108200731.azurewebsites.net/api/web");
+        var response = await client.GetAsync("https://metricsapi20201108200731.azurewebsites.net/api/error");
+        json = await client.GetFromJsonAsync<Json[]>("https://metricsapi20201108200731.azurewebsites.net/api/error");
         update();
 
     }
