--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="create">
+            <NavLink class="nav-link" href="Create">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Create Account
             </NavLink>
         </li>
@@ -38,6 +38,18 @@
                 </NavLink>
             </li>
         }
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="FetchData">
+                <span class="oi oi-plus" aria-hidden="true"></span> Fetch
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Post">
+                <span class="oi oi-plus" aria-hidden="true"></span> Post
+            </NavLink>
+        </li>
 
     </ul>
 </div>
