--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -51,6 +51,12 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Put">
+                <span class="oi oi-plus" aria-hidden="true"></span> Put
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
