--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -40,20 +40,38 @@
         }
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="FetchData">
-                <span class="oi oi-plus" aria-hidden="true"></span> Fetch
+            <NavLink class="nav-link" href="Fetch Transactions">
+                <span class="oi oi-plus" aria-hidden="true"></span> Fetch Transactions
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Post">
-                <span class="oi oi-plus" aria-hidden="true"></span> Post
+            <NavLink class="nav-link" href="Post Transaction">
+                <span class="oi oi-plus" aria-hidden="true"></span> Post Transaction
             </NavLink>
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Put">
-                <span class="oi oi-plus" aria-hidden="true"></span> Put
+            <NavLink class="nav-link" href="Put Transaction">
+                <span class="oi oi-plus" aria-hidden="true"></span> Put Transaction
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Fetch Error Rates">
+                <span class="oi oi-plus" aria-hidden="true"></span> Fetch Error Rates
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Post Error Rate">
+                <span class="oi oi-plus" aria-hidden="true"></span> Post Error Rate
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Put Error Rate">
+                <span class="oi oi-plus" aria-hidden="true"></span> Put Error Rate
             </NavLink>
         </li>
 
