--- a/BikeShopAPI_UI/Pages/PostErrorRate.razor
+++ b/BikeShopAPI_UI/Pages/PostErrorRate.razor
@@ -1,8 +1,8 @@
-﻿@page "/put"
+﻿@page "/post error rate"
 
 @using BikeShopAPI_UI.Data
 @using System.Text.Json;
-@inject TransactionService TransService
+@inject Error_RateService ErrorService
 
 <h3>Post</h3>
 
@@ -19,6 +19,6 @@ else
     HttpResponseMessage response = new HttpResponseMessage();
     protected override async Task OnInitializedAsync()
     {
-        response = await TransService.PutTransactionAsync();
+        response = await ErrorService.PostError_RateAsync();
     }
 }
