--- a/BikeShopAPI_UI/Pages/PutErrorRate.razor
+++ b/BikeShopAPI_UI/Pages/PutErrorRate.razor
@@ -4,21 +4,20 @@
 @using System.Text.Json;
 @inject Error_RateService ErrorService
 
-<h3>Post</h3>
+<h3>Put</h3>
 
-@if (response.IsSuccessStatusCode)
-{
-    <h2>Success!</h2>
-}
-else
-{
-    <h2>Error</h2>
-}
+<p>
+    <input @bind-value="Time_Stamp" @bind-value:event="onchange" />
+    <input @bind-value="Record" @bind-value:event="onchange" />
+    <button @onclick="Put" type="button">Submit</button>
+</p>
 
 @code {
+    int Record;
+    DateTime Time_Stamp = DateTime.Today;
     HttpResponseMessage response = new HttpResponseMessage();
-    protected override async Task OnInitializedAsync()
+    protected async Task Put()
     {
-        response = await ErrorService.PutError_RateAsync();
+        response = await ErrorService.PutError_RateAsync(Record, Time_Stamp);
     }
 }
