Added UI functionality to the Login table

--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -75,6 +75,24 @@
             </NavLink>
         </li>
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Fetch Logins">
+                <span class="oi oi-plus" aria-hidden="true"></span> Fetch Logins
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Post Login">
+                <span class="oi oi-plus" aria-hidden="true"></span> Post Login
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Put Login">
+                <span class="oi oi-plus" aria-hidden="true"></span> Put Login
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
