Added GET one functionality /w validation

--- a/BikeShopAPI_UI/Pages/FetchLogins.razor
+++ b/BikeShopAPI_UI/Pages/FetchLogins.razor
@@ -26,7 +26,7 @@ else
             {
             <tr>
                 <td>@login.Record</td>
-                <td>@login.Time_Stamp</td>'
+                <td>@login.Time_Stamp</td>
                 <td>@login.AccountName</td>
                 <td>@login.AccountType</td>
             </tr>
