--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -40,6 +40,12 @@
         }
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Get Transaction">
+                <span class="oi oi-plus" aria-hidden="true"></span> Get Transaction
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Fetch Transactions">
                 <span class="oi oi-plus" aria-hidden="true"></span> Fetch Transactions
             </NavLink>
@@ -58,6 +64,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Get Error Rate">
+                <span class="oi oi-plus" aria-hidden="true"></span> Get Error Rate
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Fetch Error Rates">
                 <span class="oi oi-plus" aria-hidden="true"></span> Fetch Error Rates
             </NavLink>
@@ -72,6 +84,12 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Put Error Rate">
                 <span class="oi oi-plus" aria-hidden="true"></span> Put Error Rate
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Get Login">
+                <span class="oi oi-plus" aria-hidden="true"></span> Get Login
             </NavLink>
         </li>
 
