--- a/BikeShopAPI_UI/Pages/PutTransaction.razor
+++ b/BikeShopAPI_UI/Pages/PutTransaction.razor
@@ -4,18 +4,30 @@
 @using System.Text.Json;
 @inject TransactionService TransService
 
-<h3>Put</h3>
+<h3>Put Transaction</h3>
 
-<p>
-    <input @bind-value="Time_Stamp" @bind-value:event="onchange" />
-    <input @bind-value="Record" @bind-value:event="onchange" />
-    <button @onclick="Put" type="button">Submit</button>
-</p>
+<input @bind-value="Time_Stamp" @bind-value:event="onchange" />
+<p>Format: "mm/dd/yyyy HH:mm:ss tt"</p>
+<input @bind-value="Record" @bind-value:event="onchange" />
+<p>Record ID</p>
+<button @onclick="Put" type="button">Submit</button>
+@if (response.IsSuccessStatusCode)
+{
+    <h1>Success!</h1>
+}
+else if(response.StatusCode != System.Net.HttpStatusCode.Unauthorized)
+{
+    <p>Please enter a valid Record ID.</p>
+}
+else
+{
+    <h1>Enter a DateTime</h1>
+}
 
 @code {
     DateTime Time_Stamp = DateTime.Today;
     int Record;
-    HttpResponseMessage response = new HttpResponseMessage();
+    HttpResponseMessage response = new HttpResponseMessage(System.Net.HttpStatusCode.Unauthorized);
     protected async Task Put()
     {
         response = await TransService.PutTransactionAsync(Record, Time_Stamp);
