--- a/BikeShopAPI_UI/Pages/AdminPanelWeb.razor
+++ b/BikeShopAPI_UI/Pages/AdminPanelWeb.razor
@@ -149,7 +149,7 @@
     {
         using (var client = new HttpClient())
         {
-            var res = client.PutAsync("http://localhost:5001/api/web",
+            var res = client.PutAsync("https://metricsapi20201108200731.azurewebsites.net/api/web",
                 new StringContent(JsonConvert.SerializeObject(temp),
                 Encoding.UTF8, "application/json"));
             try
