--- a/BikeShopAPI_UI/Shared/NavMenu.razor
+++ b/BikeShopAPI_UI/Shared/NavMenu.razor
@@ -65,6 +65,18 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Delete One Transaction">
+                <span class="oi oi-plus" aria-hidden="true"></span> Delete One Transaction
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Delete All Transactions">
+                <span class="oi oi-plus" aria-hidden="true"></span> Delete All Transactions
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Get Error Rate">
                 <span class="oi oi-plus" aria-hidden="true"></span> Get Error Rate
             </NavLink>
