UI Nav menu, Should work with Grants additions

--- a/BikeShopAPI_UI/Pages/AdminDir.razor
+++ b/BikeShopAPI_UI/Pages/AdminDir.razor
@@ -43,16 +43,16 @@
 
     void error()
     {
-        NavigationManager.NavigateTo("AdminPanelError");
+        NavigationManager.NavigateTo("ErrorDir");
     }
 
     void trans()
     {
-        NavigationManager.NavigateTo("AdminPanelTrans");
+        NavigationManager.NavigateTo("TransDir");
     }
 
     void log()
     {
-        NavigationManager.NavigateTo("AdminPanelLogin");
+        NavigationManager.NavigateTo("LoginDir");
     }
 }
