--- a/BikeShopAPI_UI/Pages/AdminPanelLogin.razor
+++ b/BikeShopAPI_UI/Pages/AdminPanelLogin.razor
@@ -29,50 +29,12 @@
 
 <p>
     <label>
-        Welcome to the Admin Login panel!
+        Welcome to the Admin Login Delete panel!
     </label>
 </p>
 
 
-<button class="btn btn-primary" @onclick="getAPI">Get next metric from API</button>
-
-<p>
-    <label>
-    </label>
-</p>
-
-<p>
-    <label>
-        Record:
-        <input @bind="R" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Timestamp:
-        <input @bind="DT" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Name:
-        <input @bind="name" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Type:
-        <input @bind="type" />
-    </label>
-</p>
-
-<p>
-    <label>
-    </label>
-</p>
+ 
 
 <p>
     <label>
@@ -90,12 +52,7 @@
 
 <button class="btn btn-primary" @onclick="LogOut">Log Out</button>
 
-<p>
-    <label>
-    </label>
-</p>
-
-<button class="btn btn-primary" @onclick="Edit">Edit Account</button>
+ 
 
 
 @code {
