--- a/BikeShopAPI_UI/Pages/AdminPanelTrans.razor
+++ b/BikeShopAPI_UI/Pages/AdminPanelTrans.razor
@@ -29,37 +29,11 @@
 
 <p>
     <label>
-        Welcome to the Admin Transaction panel!
+        Welcome to the Admin Transaction Delete panel!
     </label>
 </p>
 
-
-<button class="btn btn-primary" @onclick="getAPI">Get next metric from API</button>
-
-<p>
-    <label>
-    </label>
-</p>
-
-<p>
-    <label>
-        Record:
-        <input @bind="R" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Timestamp:
-        <input @bind="DT" />
-    </label>
-</p>
-
-
-<p>
-    <label>
-    </label>
-</p>
+ 
 
 <p>
     <label>
@@ -82,7 +56,7 @@
     </label>
 </p>
 
-<button class="btn btn-primary" @onclick="Edit">Edit Account</button>
+ 
 
 
 @code {
