--- a/BikeShopAPI_UI/Pages/FetchTransactions.razor
+++ b/BikeShopAPI_UI/Pages/FetchTransactions.razor
@@ -32,7 +32,7 @@ else
 }
 
 @code {
-    private Transaction[] transactions;
+    private BikeShopAPI_UI.Data.Transaction[] transactions;
     private HttpResponseMessage response;
 
     protected override async Task OnInitializedAsync()
