--- a/BikeShopAPI_UI/Pages/GetTransaction.razor
+++ b/BikeShopAPI_UI/Pages/GetTransaction.razor
@@ -39,7 +39,7 @@ else
 
 @code {
     int Record;
-    private Transaction transaction;
+    private BikeShopAPI_UI.Data.Transaction transaction;
     private HttpResponseMessage response = new HttpResponseMessage(System.Net.HttpStatusCode.OK);
 
     protected async Task Get()
