--- a/BikeShopAPI_UI/Pages/AdminPanelError.razor
+++ b/BikeShopAPI_UI/Pages/AdminPanelError.razor
@@ -29,43 +29,12 @@
 
 <p>
     <label>
-        Welcome to the Admin Error panel!
+        Welcome to the Admin Error Delete panel!
     </label>
 </p>
 
 
-<button class="btn btn-primary" @onclick="getAPI">Get next metric from API</button>
 
-<p>
-    <label>
-    </label>
-</p>
-
-<p>
-    <label>
-        Record:
-        <input @bind="R" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Timestamp:
-        <input @bind="DT" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Speed:
-        <input @bind="S" />
-    </label>
-</p>
-
-<p>
-    <label>
-    </label>
-</p>
 
 <p>
     <label>
@@ -83,12 +52,7 @@
 
 <button class="btn btn-primary" @onclick="LogOut">Log Out</button>
 
-<p>
-    <label>
-    </label>
-</p>
 
-<button class="btn btn-primary" @onclick="Edit">Edit Account</button>
 
 
 @code {
